Fill in ents & food copy.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -159,19 +159,24 @@
         <h3>Ents &amp; Food</h3>
         <div class="cannon"></div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+          Experience a night filled with fantastic food and drink at Homerton May Ball. All
+          catering has been specifically selected to complement the theme, allowing you to indulge
+          in style while enjoying the music and entertainment on offer. We will be offering up an
+          inclusive variety of food catering to all dietary requirements, and plenty of both
+          alcoholic and non-alcoholic drinks to suit every taste.
+        </p>
+        <p>
+          Those who choose the dining upgrade will be treated to a champagne reception, followed
+          by a lavish three course meal and early entrance into the May Ball itself!
         </p>
         <div class="ball"></div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+          Amidst the feasting, guests are invited to experience the magic of the fair. With a wide
+          array of entertainment we can assure that you will be spoilt for choice. However you
+          wish to spend your evening, there will be myriad choices of entertainment, carefully
+          tailored to the theme. Whether it be dancing 'til dawn or trying your hand at
+          traditional funfair games, there won’t be any danger of running out
+          of entertainment to enjoy!
         </p>
       </div>
     </section>
