Update worker information.

--- a/src/raw/workers.htm
+++ b/src/raw/workers.htm
@@ -35,11 +35,14 @@
     <section id="workers">
       <div class="center">
         <p>
-          Homerton’s biggest and best May Ball yet takes place on 16<sup>th</sup> June 2017! In
-          order to make it as spectacular and brilliant as we know it will be, we need your help!
-          If you are interested in working at Homerton May Ball 2017, please check out the roles we
-          have available and apply via the link below—applications open on 21<sup>st</sup> January
-          2017, so watch this space!
+          Homerton’s biggest and best May Ball yet takes place from 16<sup>th</sup> June 2017 to
+          17<sup>th</sup> June 2017. In order to make it as spectacular and brilliant as
+          it will be, we need your help! If you are interested in working at Homerton May
+          Ball 2017, please check out the roles we have available below.
+        </p>
+
+        <p>
+          <span class="emphasis"><a href="https://goo.gl/forms/KLDfwr2w21ht07ev1">Apply here</a></span>
         </p>
 
         <h4>Positions</h4>
@@ -57,25 +60,27 @@
           <tr>
             <td>Full-time Area Supervisor</td>
             <td>18:00–05:00</td>
-            <td>£80*</td>
+            <td>£90*</td>
           </tr>
           <tr>
             <td>Half-on/Half-off Worker</td>
-            <td>19:00–00:00 or 00:00–05:00</td>
+            <td>19:00–00:00 or 00:00–05:00&dagger;</td>
             <td>Free Entry</td>
           </tr>
           <tr>
             <td>Clear-up Worker</td>
             <td>05:00 onwards</td>
-            <td>£20*</td>
+            <td>£20</td>
           </tr>
         </table>
         <p>
-          <sub>*area supervisors and clear-up workers will also receive reservations for tickets
+          <sub>* Area supervisors will also receive reservations for tickets
           to next year's event—Homerton's 250<sup>th</sup> anniversary!</sub>
+          <br />
+          <sub>&dagger; All half-time workers will be required to sign in at 19:00.
         </p>
 
-        <h4>Full-time and Half-on/Half-off</h4>
+        <h5>Full-time and Half-on/Half-off</h5>
         <ul>
           <li>
             <strong>Cleaning:</strong> You will be responsible for keeping the Ball clean and tidy.
@@ -110,7 +115,7 @@
           prefered roles, your application may be considered for other roles.
         </p>
 
-        <h4>Area Supervisor</h4>
+        <h5>Area Supervisor</h5>
         <p>
           The role of Area Supervisor is one of leadership, management and responsibility.
           You will be responsible for the supervision of all workers in your assigned area of
@@ -121,18 +126,17 @@
           for our guests as possible.
         </p>
 
-        <h4>Clear-up Worker</h4>
+        <h5>Clear-up Worker</h5>
         <p>
           Your role will involve working with Committee members to clear up after the Ball.
           You must be flexible and prepared to perform a variety of tasks as directed by the
-          Committee. In addition to your pay you may also receive the opportunity to reserve
-          tickets for next year’s Homerton <!-- NOTE: is it a May Ball? --> May Ball 2018
-          which will be in celebration of our
-          250<sup>th</sup> Anniversary (so tickets will be popular)!
-          <!-- NOTE: can we make this promise? -->
+          Committee. You will be required to work for no longer than 3 hours.
         </p>
 
-        <br />
+        <p>
+          <span class="emphasis"><a href="https://goo.gl/forms/KLDfwr2w21ht07ev1">Apply here</a></span>
+        </p>
+
         <p>
           If you have any questions please don’t hesitate to contact our Personnel Officers, Eloïse
           and Kaylyn via <a href="mailto:mayball-staff@homerton.cam.ac.uk">email</a>. Also, make
