Add first round of committee photos.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -245,100 +245,100 @@
         <ul class="committee">
           <!-- Support team. -->
           <li class="contact">
-            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="img/contacts/vicki.jpg" /></a>
             <h5>President</h5>
             <label>Vicki Hodgson</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="img/contacts/rachel.jpg" /></a>
             <h5>Vice-President</h5>
             <label>Rachel Sweet</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-treasure@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-treasure@homerton.cam.ac.uk"><img src="img/contacts/ben_b.jpg" /></a>
             <h5>Treasurer</h5>
             <label>Ben Butt</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-@homerton.cam.ac.uk"><img src="" /></a> <!-- TODO -->
+            <a href="mailto:mayball-@homerton.cam.ac.uk"><img src="img/contacts/will.jpg" /></a> <!-- TODO -->
             <h5>HUS Representative</h5>
             <label>Will Hewstone</label>
           </li>
 
           <!-- Creative team. -->
           <li class="contact">
-            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="img/contacts/ceri.jpg" /></a>
             <h5>Design Officer</h5>
             <label>Ceri Moss</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="img/contacts/gabriela.jpg" /></a>
             <h5>Design Officer</h5>
             <label>Gabriela Martin</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk"><img src="img/contacts/melissa.jpg" /></a>
             <h5>Publicity and Sponsorship Officer</h5>
             <label>Melissa Diaz</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-ticketing@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-ticketing@homerton.cam.ac.uk"><img src="img/contacts/suroor.jpg" /></a>
             <h5>Ticketing Officer and Theme Coordinator</h5>
             <label>Suroor Rahimtoola</label>
           </li>
 
           <!-- Consumables team. -->
           <li class="contact">
-            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="img/contacts/nicole.jpg" /></a>
             <h5>Ents Officer</h5>
             <label>Nicole Lau</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="img/contacts/zoe.jpg" /></a>
             <h5>Ents Officer</h5>
             <label>Zoë Carpenter</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="img/contacts/rowenna.jpg" /></a>
             <h5>Food &amp; Drinks Officer</h5>
             <label>Rowenna McGill</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="img/contacts/caitlin.jpg" /></a>
             <h5>Food &amp; Drinks Officer</h5>
             <label>Caitlin Whitby</label>
           </li>
 
           <!-- Strategy team. -->
           <li class="contact">
-            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="img/contacts/dillan.jpg" /></a>
             <h5>Logistics Officer</h5>
             <label>Dillan Saunders</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="img/contacts/chloe.jpg" /></a>
             <h5>Security Officer</h5>
             <label>Chloe Budd</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="img/contacts/eloise.jpg" /></a>
             <h5>Personnel Officer</h5>
             <label>Eloïse Sinclair</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="img/contacts/kaylyn.jpg" /></a>
             <h5>Personnel Officer</h5>
             <label>Kaylyn Chan</label>
           </li>
 
           <!-- Tech team. -->
           <li class="contact">
-            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="img/contacts/ben_k.jpg" /></a>
             <h5>IT Officer</h5>
             <label>Ben King</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="" /></a>
+            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="img/contacts/sam.jpg" /></a>
             <h5>Webmaster</h5>
             <label>Sam Hubbard</label>
           </li>
