--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -152,7 +152,7 @@
         </p>
       </div>
     </section>
-    
+
     <div class="lawn"></div>
 
     <section id="ents">
@@ -260,7 +260,7 @@
             <label>Ben Butt</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-@homerton.cam.ac.uk"><img src="img/contacts/will.jpg" /></a> <!-- TODO -->
+            <a href="mailto:hus-president@homerton.cam.ac.uk"><img src="img/contacts/will.jpg" /></a>
             <h5>HUS Representative</h5>
             <label>Will Hewstone</label>
           </li>
