Remove all mention of reserved tickets.

--- a/src/raw/workers.htm
+++ b/src/raw/workers.htm
@@ -60,11 +60,11 @@
           <tr>
             <td>Full-time Area Supervisor</td>
             <td>18:00–05:00</td>
-            <td>£90*</td>
+            <td>£90</td>
           </tr>
           <tr>
             <td>Half-on/Half-off Worker</td>
-            <td>19:00–00:00 or 00:00–05:00&dagger;</td>
+            <td>19:00–00:00 or 00:00–05:00*</td>
             <td>Free Entry</td>
           </tr>
           <tr>
@@ -74,10 +74,7 @@
           </tr>
         </table>
         <p>
-          <sub>* Area supervisors will also receive reservations for tickets
-          to next year's event—Homerton's 250<sup>th</sup> anniversary!</sub>
-          <br />
-          <sub>&dagger; All half-time workers will be required to sign in at 19:00.
+          <sub>* All half-time workers will be required to sign in at 19:00.</sub>
         </p>
 
         <h5>Full-time and Half-on/Half-off</h5>
