Update FB OpenGraph info.

--- a/src/raw/faq.htm
+++ b/src/raw/faq.htm
@@ -10,10 +10,14 @@
   <meta name="copyright" content="Copyright © 2017 Homerton May Ball Committee" />
 
   <!-- Facebook Open Graph metadata -->
-  <meta property="og:title" content="Homerton May Ball 2017" />
-  <meta property="og:description" content="Roll up, roll up to the House of Fun" />
+  <meta property="og:title" content="Homerton May Ball 2017 | Frequently Asked Questions" />
+  <meta property="og:description" content="Roll up, roll up to the House of Fun!
+                                           Homerton May Ball is quickly becoming one of the hottest
+                                           events in May Week, with tickets selling faster every
+                                           year. Make sure to grab your ticket while they're still
+                                           available!" />
   <meta property="og:image" content="http://homertonmayball.co.uk/img/fb.png" />
-  <meta property="og:url" content="http://homertonmayball.co.uk/" />
+  <meta property="og:url" content="http://homertonmayball.co.uk/faq" />
 
   <title>FAQ | Homerton May Ball 2017</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
@@ -229,6 +233,7 @@
               </p>
             </div>
           </li>
+        </ul>
       </div>
     </section>
 
