--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -10,8 +10,12 @@
   <meta name="copyright" content="Copyright © 2017 Homerton May Ball Committee" />
 
   <!-- Facebook Open Graph metadata -->
-  <meta property="og:title" content="Homerton May Ball 2017" />
-  <meta property="og:description" content="Roll up, roll up to the House of Fun" />
+  <meta property="og:title" content="Homerton May Ball 2017: House of Fun" />
+  <meta property="og:description" content="Roll up, roll up to the House of Fun!
+                                           Homerton May Ball is quickly becoming one of the hottest
+                                           events in May Week, with tickets selling faster every
+                                           year. Make sure to grab your ticket while they're still
+                                           available!" />
   <meta property="og:image" content="http://homertonmayball.co.uk/img/fb.png" />
   <meta property="og:url" content="http://homertonmayball.co.uk/" />
 
