--- a/src/raw/workers.htm
+++ b/src/raw/workers.htm
@@ -5,15 +5,19 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="rgb(152, 45, 8)" />
-  <meta name="description" content="Homerton May Ball 2017: Workers Applications" />
+  <meta name="description" content="Homerton May Ball 2017: Worker Applications" />
   <meta name="keywords" content="May ball house of fun tickets party Homerton college Cambridge 2017 workers applications" />
   <meta name="copyright" content="Copyright © 2017 Homerton May Ball Committee" />
 
   <!-- Facebook Open Graph metadata -->
-  <meta property="og:title" content="Homerton May Ball 2017" />
-  <meta property="og:description" content="Roll up, roll up to the House of Fun" />
+  <meta property="og:title" content="Homerton May Ball 2017 | Worker Applications" />
+  <meta property="og:description" content="Roll up, roll up to the House of Fun!
+                                           Homerton May Ball is quickly becoming one of the hottest
+                                           events in May Week, with tickets selling faster every
+                                           year. Make sure to grab your ticket while they're still
+                                           available!" />
   <meta property="og:image" content="http://homertonmayball.co.uk/img/fb.png" />
-  <meta property="og:url" content="http://homertonmayball.co.uk/" />
+  <meta property="og:url" content="http://homertonmayball.co.uk/workers" />
 
   <title>Workers | Homerton May Ball 2017</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
