Complete sponsorship section.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -190,18 +190,37 @@
       <div class="center">
         <h3>Sponsors</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip.
+          Homerton May Ball would not be possible without the generosity of our sponsors:
         </p>
       </div>
-      <ul class="sponsors">
-        <li><img src="img/sponsors/TeachFirst.png" /></li>
-        <li><img src="img/sponsors/TeachFirst.png" /></li>
-        <li><img src="img/sponsors/TeachFirst.png" /></li>
-        <li><img src="img/sponsors/TeachFirst.png" /></li>
-        <li><img src="img/sponsors/TeachFirst.png" /></li>
-      </ul>
+      <div class="sponsors">
+        <ul>
+          <li>
+            <a href="https://www.teachfirst.org.uk" target="_blank">
+              <img src="img/sponsors/TeachFirst.png" />
+            </a>
+            <p>
+              Teach First is a social enterprise which aims to address educational disadvantage in
+              England and Wales. Teach First coordinates an employment-based teaching training
+              programme whereby participants achieve Qualified Teacher Status through the
+              participation in a two-year training programme that involves the completion of a
+              PGCE along with wider leadership skills training and an optional master's degree.
+            </p>
+          </li>
+          <li>
+            <a href="http://kef.com" target="_blank">
+              <img src="img/sponsors/KEF.png" />
+            </a>
+            <p>
+              KEF has been at the forefront of loudspeaker design and technology for 50
+              years. Its technical expertise and innovative designs grace anything from discreet
+              Custom Install Ci speakers to multi-award winning home theatre systems and
+              class-leading, serious Hi-Fi stereo speakers. From 1961 KEF has been the most forward
+              thinking and technologically advanced Hi-Fi manufacturer in the world.
+            </p>
+          </li>
+        </ul>
+      </div>
       <div class="center">
         <p>
           Interested in sponsoring Homerton May Ball 2017? Please get in touch with our Publicity
