Make email links clearer.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -268,102 +268,120 @@
         <ul class="committee">
           <!-- Support team. -->
           <li class="contact">
-            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="img/contacts/vicki.jpg" /></a>
+            <img src="img/contacts/vicki.jpg" />
             <h5>President</h5>
-            <label>Vicki Hodgson</label>
+            <label>Vicki Hodgson<br />
+            <a href="mailto:mayball-president@homerton.cam.ac.uk">mayball-president<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="img/contacts/rachel.jpg" /></a>
+            <img src="img/contacts/rachel.jpg" />
             <h5>Vice-President</h5>
-            <label>Rachel Sweet</label>
+            <label>Rachel Sweet<br />
+            <a href="mailto:mayball-president@homerton.cam.ac.uk">mayball-president<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-treasure@homerton.cam.ac.uk"><img src="img/contacts/ben_b.jpg" /></a>
+            <img src="img/contacts/ben_b.jpg" />
             <h5>Treasurer</h5>
-            <label>Ben Butt</label>
+            <label>Ben Butt<br />
+            <a href="mailto:mayball-treasure@homerton.cam.ac.uk">mayball-treasure<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:hus-president@homerton.cam.ac.uk"><img src="img/contacts/will.jpg" /></a>
+            <img src="img/contacts/will.jpg" />
             <h5>HUS Representative</h5>
-            <label>Will Hewstone</label>
+            <label>Will Hewstone<br />
+            <a href="mailto:hus-president@homerton.cam.ac.uk">hus-president<wbr>@homerton.cam.ac.uk</a></label>
           </li>
 
           <!-- Creative team. -->
           <li class="contact">
-            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="img/contacts/ceri.jpg" /></a>
+            <img src="img/contacts/ceri.jpg" />
             <h5>Design Officer</h5>
-            <label>Ceri Moss</label>
+            <label>Ceri Moss<br />
+            <a href="mailto:mayball-design@homerton.cam.ac.uk">mayball-design<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="img/contacts/gabriela.jpg" /></a>
+            <img src="img/contacts/gabriela.jpg" />
             <h5>Design Officer</h5>
-            <label>Gabriela Martin</label>
+            <label>Gabriela Martin<br />
+            <a href="mailto:mayball-design@homerton.cam.ac.uk">mayball-design<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk"><img src="img/contacts/melissa.jpg" /></a>
+            <img src="img/contacts/melissa.jpg" />
             <h5>Publicity and Sponsorship Officer</h5>
-            <label>Melissa Diaz</label>
+            <label>Melissa Diaz<br />
+            <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk">mayball-sponsorship<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-ticketing@homerton.cam.ac.uk"><img src="img/contacts/suroor.jpg" /></a>
+            <img src="img/contacts/suroor.jpg" />
             <h5>Ticketing Officer and Theme Coordinator</h5>
-            <label>Suroor Rahimtoola</label>
+            <label>Suroor Rahimtoola<br />
+            <a href="mailto:mayball-ticketing@homerton.cam.ac.uk">mayball-ticketing<wbr>@homerton.cam.ac.uk</a></label>
           </li>
 
           <!-- Consumables team. -->
           <li class="contact">
-            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="img/contacts/nicole.jpg" /></a>
+            <img src="img/contacts/nicole.jpg" />
             <h5>Ents Officer</h5>
-            <label>Nicole Lau</label>
+            <label>Nicole Lau<br />
+            <a href="mailto:mayball-ent@homerton.cam.ac.uk">mayball-ent<wbr>@homerton.cam.ac.uk</a></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="img/contacts/zoe.jpg" /></a>
+            <img src="img/contacts/zoe.jpg" />
             <h5>Ents Officer</h5>
-            <label>Zoë Carpenter</label>
+            <label>Zoë Carpenter<br />
+            <sup><a href="mailto:mayball-ent@homerton.cam.ac.uk">mayball-ent<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="img/contacts/rowenna.jpg" /></a>
+            <img src="img/contacts/rowenna.jpg" />
             <h5>Food &amp; Drinks Officer</h5>
-            <label>Rowenna McGill</label>
+            <label>Rowenna McGill<br />
+            <sup><a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk">mayball-food-and-drinks<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="img/contacts/caitlin.jpg" /></a>
+            <img src="img/contacts/caitlin.jpg" />
             <h5>Food &amp; Drinks Officer</h5>
-            <label>Caitlin Whitby</label>
+            <label>Caitlin Whitby<br />
+            <sup><a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk">mayball-food-and-drinks<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
 
           <!-- Strategy team. -->
           <li class="contact">
-            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="img/contacts/dillan.jpg" /></a>
+            <img src="img/contacts/dillan.jpg" />
             <h5>Logistics Officer</h5>
-            <label>Dillan Saunders</label>
+            <label>Dillan Saunders<br />
+            <sup><a href="mailto:mayball-safety@homerton.cam.ac.uk">mayball-safety<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="img/contacts/chloe.jpg" /></a>
+            <img src="img/contacts/chloe.jpg" />
             <h5>Security Officer</h5>
-            <label>Chloe Budd</label>
+            <label>Chloe Budd<br />
+            <sup><a href="mailto:mayball-safety@homerton.cam.ac.uk">mayball-safety<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="img/contacts/eloise.jpg" /></a>
+            <img src="img/contacts/eloise.jpg" />
             <h5>Personnel Officer</h5>
-            <label>Eloïse Sinclair</label>
+            <label>Eloïse Sinclair<br />
+            <sup><a href="mailto:mayball-staff@homerton.cam.ac.uk">mayball-staff<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="img/contacts/kaylyn.jpg" /></a>
+            <img src="img/contacts/kaylyn.jpg" />
             <h5>Personnel Officer</h5>
-            <label>Kaylyn Chan</label>
+            <label>Kaylyn Chan<br />
+            <sup><a href="mailto:mayball-staff@homerton.cam.ac.uk">mayball-staff<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
 
           <!-- Tech team. -->
           <li class="contact">
-            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="img/contacts/ben_k.jpg" /></a>
+            <img src="img/contacts/ben_k.jpg" />
             <h5>IT Officer</h5>
-            <label>Ben King</label>
+            <label>Ben King<br />
+            <sup><a href="mailto:mayball-technical@homerton.cam.ac.uk">mayball-technical<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="img/contacts/sam.jpg" /></a>
+            <img src="img/contacts/sam.jpg" />
             <h5>Webmaster</h5>
-            <label>Sam Hubbard</label>
+            <label>Sam Hubbard<br />
+            <sup><a href="mailto:mayball-technical@homerton.cam.ac.uk">mayball-technical<wbr>@homerton.cam.ac.uk</a></sup></label>
           </li>
         </ul>
       </div>
