Add black tie to description.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -78,7 +78,7 @@
           <ul>
             <li>Friday 16<sup>th</sup> June</li>
             <li>9:00pm–5:00am</li>
-            <li>Homerton College</li>
+            <li>Black Tie</li>
           </ul>
         </div>
       </div>
