Update for TICKET LAUNCH AAAAAHHHHH

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -89,11 +89,16 @@
       <div class="center">
         <h3>Tickets</h3>
         <p>
-          Ticket applications will open at <strong>8pm</strong> on <strong>Saturday 28<sup>th</sup>
-          January</strong> to current students of Homerton College, and at <strong>8pm</strong> on
-          <strong>Saturday 4<sup>th</sup> February</strong> to all University students
-          and Homerton alumni. Successful applicants will have <strong>one week</strong> to make
-          payment before their reserved ticket(s) are released to the waiting list.
+          Ticket applications for current students of Homerton College are open!
+        </p>
+        <p>
+          <span class="emphasis"><a href="http://tickets.homertonmayball.co.uk">Apply here</a></span>
+        </p>
+        <p>
+          Ticket applications will open to all University students and Homerton alumni at
+          <strong>8pm</strong> on <strong>Saturday 4<sup>th</sup> February</strong>. Successful
+          applicants will have <strong>one week</strong> to make payment before their reserved
+          ticket(s) are released to the waiting list.
         </p>
         <p>
           Each ticket applicant can buy up to three guest tickets in addition to their own.
