Cash/cheque FAQ.

--- a/src/raw/faq.htm
+++ b/src/raw/faq.htm
@@ -91,6 +91,32 @@
           </li>
 
           <li>
+            <a>Can I pay by cash, cheque or card?</a>
+            <div>
+              <p>
+                Unfortunately, it is not possible to pay for your tickets by card.
+              </p>
+              <p>
+                However, it is possible to pay by cash or cheque. All cheques must be made payable
+                to “Colophon Limited”, and any cash or cheque payments must be placed in a sealed
+                envelope and handed in to the HUS Office Manager, Emma Themba, during HUS office
+                hours (10am–2pm). Please include on this envelope the following information:
+              </p>
+              <ul class="display">
+                <li>Your name as primary applicant</li>
+                <li>Your payment reference</li>
+                <li>Total paid</li>
+                <li>The names of any guests on your application</li>
+                <li>The number &amp; type(s) of tickets being paid for</li>
+              </ul>
+              <p>
+                Please note that it is likely to take longer to process cash or cheque payments
+                and bank transfer is preferred where possible.
+              </p>
+            </div>
+          </li>
+
+          <li>
             <a>Can I get a refund for my ticket?</a>
             <div>
               <p>
