Remove line about second ticket release.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -89,12 +89,6 @@
       <div class="center">
         <h3>Tickets</h3>
         <p>
-          Ticket applications will open to all University students and Homerton alumni at
-          <strong>8pm</strong> on <strong>Saturday 4<sup>th</sup> February</strong>. Successful
-          applicants will have <strong>one week</strong> to make payment before their reserved
-          ticket(s) are released to the waiting list.
-        </p>
-        <p>
           Current students of Homerton College may add themselves to the waiting list below.
         </p>
         <p>
@@ -103,7 +97,8 @@
         <p>
           Each ticket applicant may buy up to three guest tickets in addition to their own.
           These tickets may be for current students at any college, alumni, or family/friends
-          from outside the University.
+          from outside the University. Successful applicants will have <strong>one week</strong>
+          to make payment before their reserved ticket(s) are released to the waiting list.
         </p>
         <div class="blurbs">
           <h4>Pricing</h4>
