--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -89,16 +89,18 @@
       <div class="center">
         <h3>Tickets</h3>
         <p>
-          Current students of Homerton College may add themselves to the waiting list below.
+          A limited number of tickets will go on general sale at <strong>8pm</strong> on
+          <strong>Saturday 4<super>th</super> February</strong>, to all students of the
+          University of Cambridge. Previous applicants will also be able to purchase additional
+          guest tickets, up to a maximum of three, if they did not meet this quota originally.
         </p>
         <p>
-          <span class="emphasis"><a href="http://tickets.homertonmayball.co.uk">Join the waiting list</a></span>
+          <span class="emphasis"><a href="http://tickets.homertonmayball.co.uk">Apply here</a></span>
         </p>
         <p>
-          Each ticket applicant may buy up to three guest tickets in addition to their own.
-          These tickets may be for current students at any college, alumni, or family/friends
-          from outside the University. Successful applicants will have <strong>one week</strong>
-          to make payment before their reserved ticket(s) are released to the waiting list.
+          All applicants who are successful in this ticket sale will have <strong>until
+          16<super>th</super> February</strong> to make payment before their reserved ticket(s)
+          are released to the waiting list.
         </p>
         <div class="blurbs">
           <h4>Pricing</h4>
