Update with sold out message.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -89,18 +89,12 @@
       <div class="center">
         <h3>Tickets</h3>
         <p>
-          A limited number of tickets will go on general sale at <strong>8pm</strong> on
-          <strong>Saturday 4<super>th</super> February</strong>, to all students of the
-          University of Cambridge. Previous applicants will also be able to purchase additional
-          guest tickets, up to a maximum of three, if they did not meet this quota originally.
+          All tickets for the Homerton May Ball have now <strong>sold out</strong>. However, in
+          the event of cancellations, tickets will be re-released to individuals on the waiting
+          list. You can join here:
         </p>
         <p>
-          <span class="emphasis"><a href="http://tickets.homertonmayball.co.uk">Apply here</a></span>
-        </p>
-        <p>
-          All applicants who are successful in this ticket sale will have <strong>until
-          16<super>th</super> February</strong> to make payment before their reserved ticket(s)
-          are released to the waiting list.
+          <span class="emphasis"><a href="http://tickets.homertonmayball.co.uk">Join the waiting list</a></span>
         </p>
         <div class="blurbs">
           <h4>Pricing</h4>
