Update KEF blurb.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -192,9 +192,11 @@
       <div class="sponsors">
         <ul>
           <li>
-            <a href="https://www.teachfirst.org.uk" target="_blank">
-              <img src="img/sponsors/TeachFirst.png" />
-            </a>
+            <div>
+              <a href="https://www.teachfirst.org.uk" target="_blank">
+                <img src="img/sponsors/TeachFirst.png" />
+              </a>
+            </div>
             <p>
               Teach First is a social enterprise which aims to address educational disadvantage in
               England and Wales. Teach First coordinates an employment-based teaching training
@@ -204,15 +206,19 @@
             </p>
           </li>
           <li>
-            <a href="http://kef.com" target="_blank">
-              <img src="img/sponsors/KEF.png" />
-            </a>
+            <div>
+              <a href="http://kef.com" target="_blank">
+                <img src="img/sponsors/KEF.png" />
+              </a>
+            </div>
             <p>
-              KEF has been at the forefront of loudspeaker design and technology for 50
-              years. Its technical expertise and innovative designs grace anything from discreet
-              Custom Install Ci speakers to multi-award winning home theatre systems and
-              class-leading, serious Hi-Fi stereo speakers. From 1961 KEF has been the most forward
-              thinking and technologically advanced Hi-Fi manufacturer in the world.
+              KEF, a leader in loudspeaker design &amp; technology, has a reputation as the
+              ultimate loudspeaker manufacturer. From class-leading, hi-fi stereo speakers to
+              state-of-the-art portable wireless speakers and headphones, KEF is introducing a
+              fresh generation to the possibility of experiencing sound in a whole new way—exactly
+              as the original artist intended. Get the most out of your music with KEF’s
+              award-winning models which combine state-of-the-art industrial design and
+              class-leading sound performance.
             </p>
           </li>
         </ul>
