Add blurb for Barnes.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -221,6 +221,19 @@
               class-leading sound performance.
             </p>
           </li>
+          <li>
+            <div>
+              <a href="http://www.barnesconstruction.co.uk/" target="_blank">
+                <img src="img/sponsors/Barnes.png" />
+              </a>
+            </div>
+            <p>
+              As the construction division of The Barnes Group, Barnes Construction undertake a
+              wide range of projects for clients both in the East of England and throughout the
+              UK delivering projects to a high standard in the shortest timeframes, providing
+              value for money and a good all round construction experience. 
+            </p>
+          </li>
         </ul>
       </div>
       <div class="center">
